--- a/translations/kangyur/placeholders/034-014_toh26-the_perfection_of_wisdom_for_suryagarbha.xml
+++ b/translations/kangyur/placeholders/034-014_toh26-the_perfection_of_wisdom_for_suryagarbha.xml
@@ -10,14 +10,15 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryaprajñāpāramitā­sūryagarbha­mahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa shes rab kyi pha rol tu phyin pa nyi ma'i snying po theg pa chen po'i mdo</title>
                 <author role="translatorMain" ref="eft:team-79"/>
-                <consultant role="dharmaMaster" ref="eft:person-396">Geshe Dakpa Kalsang </consultant>
+                <consultant role="dharmaMaster" ref="eft:person-396">Geshe Dakpa Kalsang</consultant>
                 <consultant role="projectManager" ref="eft:person-395">Sanjib Kumar Das</consultant>
                 <author role="translatorEng" ref="eft:person-395">Sanjib Kumar Das</author>
                 <editor role="reviser" ref="eft:person-395">Sanjib Kumar Das</editor>
                 <editor role="proofreader" ref="eft:person-397">Ritiman Das</editor>
+                <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2022</date>
+                <edition>v 0.0.7 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.g">
@@ -36,7 +37,18 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-11T08:33:28.981Z" user="admin">11/01/2023 08:33:28</note>    <note type="updated" update="translation-status" value="4" date-time="2022-03-08T09:46:01.807Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-03-08T09:46:01.807Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2022-05-18T11:25:29.991Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-05-18T11:25:29.991Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-05-18T11:26:04.203Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-05-18T11:27:29.965Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-11-28T11:30:11.605Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-11-28T11:30:11.605Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2023-01-11T08:33:23.432Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.6" date-time="2023-01-11T08:33:23.432Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2023-01-11T08:34:00.096Z" user="admin">11/01/2023 08:34:00</note>
+                <note type="updated" update="translation-status" value="4" date-time="2022-03-08T09:46:01.807Z" user="line-tofte">4</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-03-08T09:46:01.807Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-05-18T11:25:29.991Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-05-18T11:25:29.991Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-05-18T11:26:04.203Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-05-18T11:27:29.965Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2022-11-28T11:30:11.605Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-11-28T11:30:11.605Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2023-01-11T08:33:23.432Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2023-01-11T08:33:23.432Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2023-01-11T08:33:54.569Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
