--- a/translations/kangyur/placeholders/034-016_toh28-the_perfection_of_wisdom_for_samantabhadra.xml
+++ b/translations/kangyur/placeholders/034-016_toh28-the_perfection_of_wisdom_for_samantabhadra.xml
@@ -15,9 +15,10 @@
                 <author role="translatorEng" ref="eft:person-405">Philippe Cornu</author>
                 <editor role="reviser" ref="eft:person-406">Grégoire Langouët</editor>
                 <editor role="proofreader" ref="eft:person-406">Grégoire Langouët</editor>
+                <editor role="projectEditor" ref="eft:person-139">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2022</date>
+                <edition>v 0.0.9 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.g">
@@ -36,7 +37,20 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-11T09:28:56.034Z" user="admin">11/01/2023 09:28:56</note>    <note type="updated" update="translation-status" value="4" date-time="2022-03-08T09:47:31.921Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-03-08T09:47:31.921Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2022-05-18T13:04:32.358Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-05-18T13:04:32.358Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-05-18T13:05:09.738Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-05-18T13:08:18.618Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-05-18T13:08:44.435Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="text-version" value="0.0.6" date-time="2022-05-18T13:10:20.419Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-07-14T12:40:11.682Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.7" date-time="2022-07-14T12:40:11.682Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2023-01-11T09:28:50.505Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.8" date-time="2023-01-11T09:28:50.505Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2023-01-11T09:29:24.176Z" user="admin">11/01/2023 09:29:24</note>
+                <note type="updated" update="translation-status" value="4" date-time="2022-03-08T09:47:31.921Z" user="line-tofte">4</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-03-08T09:47:31.921Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-05-18T13:04:32.358Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-05-18T13:04:32.358Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-05-18T13:05:09.738Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-05-18T13:08:18.618Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-05-18T13:08:44.435Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2022-05-18T13:10:20.419Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2022-07-14T12:40:11.682Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2022-07-14T12:40:11.682Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2023-01-11T09:28:50.505Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2023-01-11T09:28:50.505Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2023-01-11T09:29:18.653Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
