--- a/translations/kangyur/placeholders/103-004_toh4568-3-chapter_3_publication_history_of_the_conquerors_extant_scriptures.xml
+++ b/translations/kangyur/placeholders/103-004_toh4568-3-chapter_3_publication_history_of_the_conquerors_extant_scriptures.xml
@@ -15,10 +15,10 @@
                 <sponsor ref="eft:sponsor-219">Chan Wing Fai, Lam Wai Ling, Chan Oi Yi, Chan Tung Mei, Chan Yu Ka, Chan Sui Li, Chan Ya Ho, Chan Yu Lin, Zhong Sheng jian, Lin Miao Jun.</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.10 <date>2020</date>
+                <edition>v 0.0.11 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.g">
+            <publicationStmt status="2.f">
                 <idno xml:id="UT22084-103-004"/>
                 <date/>
             </publicationStmt>
@@ -34,7 +34,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-11-04T13:38:22.082Z" user="cabie-sim">04/11/2022 13:38:22</note>
+                <note type="lastUpdated" date-time="2023-01-11T09:51:07.148Z" user="admin">11/01/2023 09:51:07</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-08-17T14:45:05.214Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-08-17T14:45:05.214Z" user="line-tofte">3</note>
                 <note type="updated" update="publication-date" value="" date-time="2020-08-17T14:45:05.214Z" user="line-tofte"/>
@@ -49,6 +49,8 @@
                 <note type="updated" update="text-version" value="0.0.8" date-time="2021-12-24T05:50:21.594Z" user="cabie-sim">Auto (update-sponsorship)</note>
                 <note type="updated" update="text-version" value="0.0.9" date-time="2022-07-26T07:49:57.737Z" user="cabie-sim">Auto (update-titles)</note>
                 <note type="updated" update="text-version" value="0.0.10" date-time="2022-11-04T13:38:20.629Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2023-01-11T09:51:01.607Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.11" date-time="2023-01-11T09:51:01.607Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
