--- a/translations/kangyur/placeholders/103-004_toh4568-3-chapter_3_publication_history_of_the_conquerors_extant_scriptures.xml
+++ b/translations/kangyur/placeholders/103-004_toh4568-3-chapter_3_publication_history_of_the_conquerors_extant_scriptures.xml
@@ -7,15 +7,15 @@
                 <title type="mainTitle" xml:lang="en">Chapter 3: Publication History of the Conqueror's Extant Scriptures</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">gsum pa/ rgyal ba'i gsung rab gangs ri'i khrod du deng sang ji tsam snang ba par du bsgrubs pa'i byung ba dngos legs par bshad pa'i yal 'dab/</title>
                 <title type="otherTitle" xml:lang="zh">德格版甘珠爾經文目錄：第三章 有關耆那（佛陀）之教法的出版歷史的解釋</title>
-                <author role="translatorMain" ref="contributors.xml#team-49"/>
-                <author role="translatorEng" ref="contributors.xml#person-67">Lowell Cook</author>
-                <author role="translatorEng" ref="contributors.xml#person-60">Benjamin Ewing</author>
-                <consultant role="projectManager" ref="contributors.xml#person-60">Benjamin Ewing</consultant>
-                <editor role="projectEditor" ref="contributors.xml#person-250">Rory Lindsay, Dr.</editor>
+                <author role="translatorMain" ref="eft:team-49"/>
+                <author role="translatorEng" ref="eft:person-67">Lowell Cook</author>
+                <author role="translatorEng" ref="eft:person-60">Benjamin Ewing</author>
+                <consultant role="projectManager" ref="eft:person-60">Benjamin Ewing</consultant>
+                <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
                 <sponsor ref="eft:sponsor-219">Chan Wing Fai, Lam Wai Ling, Chan Oi Yi, Chan Tung Mei, Chan Yu Ka, Chan Sui Li, Chan Ya Ho, Chan Yu Lin, Zhong Sheng jian, Lin Miao Jun.</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.11 <date>2020</date>
+                <edition>v 0.0.12 <date>2020</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.f">
@@ -34,7 +34,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-11T09:51:07.148Z" user="admin">11/01/2023 09:51:07</note>
+                <note type="lastUpdated" date-time="2023-01-11T09:52:13.492Z" user="admin">11/01/2023 09:52:13</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-08-17T14:45:05.214Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-08-17T14:45:05.214Z" user="line-tofte">3</note>
                 <note type="updated" update="publication-date" value="" date-time="2020-08-17T14:45:05.214Z" user="line-tofte"/>
@@ -51,6 +51,7 @@
                 <note type="updated" update="text-version" value="0.0.10" date-time="2022-11-04T13:38:20.629Z" user="cabie-sim">Auto (update-sponsorship)</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2023-01-11T09:51:01.607Z" user="line-tofte">2.f</note>
                 <note type="updated" update="text-version" value="0.0.11" date-time="2023-01-11T09:51:01.607Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.12" date-time="2023-01-11T09:52:07.968Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
