--- a/translations/kangyur/placeholders/072-006_toh306-teaching_the_practice_of_austerities_from_the_path_of_liberation.xml
+++ b/translations/kangyur/placeholders/072-006_toh306-teaching_the_practice_of_austerities_from_the_path_of_liberation.xml
@@ -14,10 +14,10 @@
                 <author role="translatorEng" ref="eft:person-394">Susan Roach</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.5 <date>2021</date>
+                <edition>v 0.0.6 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-072-006"/>
                 <date/>
             </publicationStmt>
@@ -33,10 +33,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-04-19T09:44:18.319Z" user="admin">19/04/2022 09:44:18</note>
+                <note type="lastUpdated" date-time="2023-01-11T12:59:51.843Z" user="admin">11/01/2023 12:59:51</note>
     <note type="updated" update="text-version" value="0.0.1" date-time="2021-05-17T09:53:05.292Z" user="john">Auto (update-titles)</note>
     <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-17T09:57:42.566Z" user="john">Auto (update-titles)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-05-17T10:00:22.678Z" user="john">0.0.3</note>    <note type="updated" update="translation-status" value="3" date-time="2022-04-19T09:43:19.656Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-04-19T09:43:19.656Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-04-19T09:44:14.652Z" user="line-tofte">Auto (update-contributors)</note>
+    <note type="updated" update="text-version" value="0.0.3" date-time="2021-05-17T10:00:22.678Z" user="john">0.0.3</note>    <note type="updated" update="translation-status" value="3" date-time="2022-04-19T09:43:19.656Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-04-19T09:43:19.656Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-04-19T09:44:14.652Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2023-01-11T12:59:46.276Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.6" date-time="2023-01-11T12:59:46.276Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
