--- a/translations/kangyur/translations/090-045_toh601,884-the_incantation_of_the_reliquary.xml
+++ b/translations/kangyur/translations/090-045_toh601,884-the_incantation_of_the_reliquary.xml
@@ -27,7 +27,7 @@
         <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.0 <date>2023</date>
+                <edition>v 1.0.1 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -70,7 +70,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-01-11T13:49:00.309Z" user="admin">11/01/2023 13:49:00</note>
+        <note type="lastUpdated" date-time="2023-01-11T19:10:18.743Z" user="admin">11/01/2023 19:10:18</note>
         <note type="updated" update="translation-status" value="4" date-time="2021-10-25T12:26:35.738Z" user="line-tofte">4</note>
         <note type="updated" update="text-version" value="0.0.1" date-time="2021-10-25T12:26:35.738Z" user="line-tofte">0.0.1</note>
         <note type="updated" update="translation-status" value="3" date-time="2021-10-29T14:24:28.861Z" user="line-tofte">3</note>
@@ -107,6 +107,7 @@
           <note type="updated" update="text-version" value="0.0.2" date-time="2022-10-24T09:41:02.97Z" user="line-tofte">Auto (update-publication-status)</note>
           <note type="updated" update="translation-status" value="1.a" date-time="2023-01-11T13:48:54.788Z" user="martina-cotter">1.a</note>
           <note type="updated" update="text-version" value="1.0.0" date-time="2023-01-11T13:48:54.788Z" user="martina-cotter">First published version</note>
+          <note type="updated" update="text-version" value="1.0.1" date-time="2023-01-11T19:10:15.932Z" user="martina-cotter">Updated opening verses.</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -287,18 +288,23 @@
         <head type="titleMain" tid="24">The Dhāraṇī for a Caitya</head>
         <div type="section" xml:id="UT22084-090-045-section-1">
           <milestone unit="chunk" xml:id="UT22084-090-045-32"/>
-          <p tid="28">
-                        <ref cRef="F.260.a" type="folio" key="toh601" xml:id="UT22084-090-045-215"/>
-            <ref cRef="F.129.a" type="folio" key="toh884" xml:id="UT22084-090-045-216"/> Homage to
-            the Three Jewels. <lb/> Homage to the Blessed One, Vajradhara. <lb/> Homage to the
+          <lg tid="133">
+                        <l>
+                            <ref cRef="F.260.a" type="folio" key="toh601" xml:id="UT22084-090-045-215"/>
+            <ref cRef="F.129.a" type="folio" key="toh884" xml:id="UT22084-090-045-216"/>Homage to
+            the Three Jewels.</l>
+          <l>Homage to the Blessed One, Vajradhara.</l>
+          <l>Homage to the
             blessed, thus-gone, worthy, perfect Buddha, the king with majestic power over the mode,
-            discipline, and miraculous display of all things. </p>
+            discipline, and miraculous display of all things. </l>
+                    </lg>
           <milestone unit="chunk" xml:id="UT22084-090-045-35"/>
           <lg tid="31">
-            <l>I pay homage to the venerable buddhas of the three times,</l>
-            <l>To the venerable and virtuous Three Jewels,</l>
-            <l>To Akṣobhya, Amitābha, and Avalokiteśvara,</l>
-            <l>And to the three families.<note place="end" xml:id="UT22084-090-045-36"> In the
+            <l>I pay homage to the buddhas of the three times!</l>
+            <l>Homage to the virtuous Three Jewels!</l>
+            <l>Homage to Akṣobhya,</l>
+            <l>To Amitābha and Avalokiteśvara!</l>
+            <l>Homage to the three families!<note place="end" xml:id="UT22084-090-045-36"> In the
                 context of Kriyātantra literature, the “three families” likely refers to the vajra,
                 lotus, and tathāgata families. </note>
                         </l>
