--- a/translations/kangyur/placeholders/003-006_toh1-11-chapter_11_on_a_group_of_troublesome_monks.xml
+++ b/translations/kangyur/placeholders/003-006_toh1-11-chapter_11_on_a_group_of_troublesome_monks.xml
@@ -8,9 +8,10 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">pāṇḍulohitakavastu</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">dmar ser can gyi gzhi/</title>
                 <author role="translatorMain" ref="eft:team-77"/>
+                <author role="translatorEng" ref="eft:person-394">Susan Roach</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2023</date>
+                <edition>v 0.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -29,10 +30,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-12T09:48:13.288Z" user="admin">12/01/2023 09:48:13</note>
+                <note type="lastUpdated" date-time="2023-01-12T09:48:45.211Z" user="admin">12/01/2023 09:48:45</note>
                 <note type="updated" update="translation-status" value="3" date-time="2023-01-12T09:47:33.012Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2023-01-12T09:47:33.012Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2023-01-12T09:48:11.836Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2023-01-12T09:48:43.761Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
