--- a/translations/kangyur/translations/096-054_toh805-the_tantra_the_questions_of_subahu.xml
+++ b/translations/kangyur/translations/096-054_toh805-the_tantra_the_questions_of_subahu.xml
@@ -27,10 +27,10 @@
             <editor role="finalReviewer" ref="eft:person-289">Nathaniel Rich</editor>
          </titleStmt>
          <editionStmt>
-                <edition>v 1.1.3 <date>2022</date>
+                <edition>v 1.1.4 <date>2022</date>
                 </edition>
             </editionStmt>
-         <publicationStmt status="1.a">
+         <publicationStmt status="1">
                 <publisher>
                <name>84000: Translating the Words of the Buddha</name> is a global non-profit
                initiative to translate all the Buddha’s words into modern languages, and to make
@@ -67,7 +67,7 @@
             </bibl>
          </sourceDesc>
          <notesStmt>
-            <note type="lastUpdated" date-time="2023-01-11T15:13:26.486Z" user="admin">11/01/2023 15:13:26</note>
+            <note type="lastUpdated" date-time="2023-01-15T08:17:14.751Z" user="admin">15/01/2023 08:17:14</note>
             <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-05T08:42:54.93Z" user="line-tofte">0.0.1</note>
             <note type="updated" update="translation-status" value="2.h" date-time="2021-01-04T12:42:03.731Z" user="line-tofte">2.h</note>
             <note type="updated" update="text-version" value="0.0.2" date-time="2021-01-04T12:42:03.731Z" user="line-tofte">Auto
@@ -122,6 +122,8 @@
              <note type="updated" update="text-version" value="1.1.1" date-time="2023-01-02T11:34:06.732Z" user="john">Title changed throughout to "Tantra of Subāhu’s Questions"</note>
              <note type="updated" update="text-version" value="1.1.2" date-time="2023-01-02T11:46:12.068Z" user="john">Further small change.</note>
              <note type="updated" update="text-version" value="1.1.3" date-time="2023-01-11T15:13:23.591Z" user="martina-cotter">Updated typo.</note>
+             <note type="updated" update="translation-status" value="1" date-time="2023-01-15T08:17:08.939Z" user="sameer">1</note>
+             <note type="updated" update="text-version" value="1.1.4" date-time="2023-01-15T08:17:08.939Z" user="sameer">Included in App v 2.8</note>
          </notesStmt>
       </fileDesc>
    </teiHeader>
