--- a/translations/kangyur/placeholders/062-015_toh215-the_sutra_on_advice_for_the_king_2.xml
+++ b/translations/kangyur/placeholders/062-015_toh215-the_sutra_on_advice_for_the_king_2.xml
@@ -17,11 +17,11 @@
                 <editor role="projectEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2019</date>
+                <edition>v 0.0.6 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.h">
+            <publicationStmt status="2.g">
                 <idno xml:id="UT22084-062-015"/>
                 <date/>
             </publicationStmt>
@@ -37,7 +37,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-04T09:57:18.601Z" user="admin">04/01/2023 09:57:18</note>
+                <note type="lastUpdated" date-time="2023-01-16T09:54:51.085Z" user="admin">16/01/2023 09:54:51</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2022-11-14T15:10:19.347Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-11-14T15:10:19.347Z" user="line-tofte">Auto (update-publication-status)</note>
@@ -46,6 +46,8 @@
                 <note type="updated" update="text-version" value="0.0.4" date-time="2022-12-13T14:04:39.739Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2023-01-04T09:57:12.88Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.5" date-time="2023-01-04T09:57:12.88Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2023-01-16T09:54:45.566Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2023-01-16T09:54:45.566Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
