--- a/translations/kangyur/placeholders/100-047_toh891-the_incantation_of_sarvanivaranaviskambhin.xml
+++ b/translations/kangyur/placeholders/100-047_toh891-the_incantation_of_sarvanivaranaviskambhin.xml
@@ -11,9 +11,10 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sgrib pa rnam par sel ba zhes bya ba'i gzungs/</title>
                 <author role="translatorMain" ref="eft:team-55"/>
                 <author role="translatorEng" ref="eft:person-61">Catherine Dalton</author>
+                <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2022</date>
+                <edition>v 0.0.5 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.g">
@@ -32,7 +33,15 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-11T09:30:14.836Z" user="admin">11/01/2023 09:30:14</note>    <note type="updated" update="translation-status" value="3" date-time="2022-04-13T12:55:53.951Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-04-13T12:55:53.951Z" user="line-tofte">0.0.1</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-13T12:56:18.881Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-06-16T09:45:38.98Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-16T09:45:38.98Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2023-01-11T09:30:09.28Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2023-01-11T09:30:09.28Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2023-01-16T10:02:37.651Z" user="admin">16/01/2023 10:02:37</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-04-13T12:55:53.951Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-04-13T12:55:53.951Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-13T12:56:18.881Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2022-06-16T09:45:38.98Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-16T09:45:38.98Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2023-01-11T09:30:09.28Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2023-01-11T09:30:09.28Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2023-01-16T10:02:32.09Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
