--- a/translations/kangyur/placeholders/065-004_toh241-the_sutra_of_the_wheel_of_samadhi.xml
+++ b/translations/kangyur/placeholders/065-004_toh241-the_sutra_of_the_wheel_of_samadhi.xml
@@ -19,9 +19,10 @@
                 <editor role="copyEditor" ref="eft:person-422">George FitzHerbert</editor>
                 <editor role="copyEditor" ref="eft:person-249">Konchog Norbu</editor>
                 <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
+                <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.13 <date>2019</date>
+                <edition>v 0.1.14 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -41,7 +42,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-16T12:51:19.992Z" user="admin">16/01/2023 12:51:19</note>
+                <note type="lastUpdated" date-time="2023-01-16T12:51:51.3Z" user="admin">16/01/2023 12:51:51</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-09T06:16:46.43Z" user="andreas">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2022-03-14T11:00:47.488Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.1.1" date-time="2022-03-14T11:00:47.488Z" user="line-tofte">Auto (update-publication-status)</note>
@@ -64,6 +65,7 @@
                 <note type="updated" update="text-version" value="0.1.12" date-time="2023-01-05T08:06:05Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.a" date-time="2023-01-16T12:51:14.391Z" user="line-tofte">2.a</note>
                 <note type="updated" update="text-version" value="0.1.13" date-time="2023-01-16T12:51:14.391Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.1.14" date-time="2023-01-16T12:51:45.712Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
