--- a/translations/kangyur/placeholders/065-001_toh238-the_sutra_of_the_deliberation_on_the_dharma.xml
+++ b/translations/kangyur/placeholders/065-001_toh238-the_sutra_of_the_deliberation_on_the_dharma.xml
@@ -10,15 +10,16 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryadharmasaṅgīti­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa chos yang dag par sdud pa zhes bya ba theg pa chen po'i mdo</title>
                 <title type="otherTitle" xml:lang="zh">《法集經》 （大正藏：佛說法集經）</title>
-                <author role="translatorMain" ref="contributors.xml#team-33"/>
-                <author role="translatorEng" ref="contributors.xml#person-304">David Kittay</author>
-                <consultant role="dharmaMaster" ref="contributors.xml#person-199">Lozang Jamspal</consultant>
-                <consultant role="projectManager" ref="contributors.xml#person-304">David Kittay</consultant>
-                <editor role="externalReviewer" ref="contributors.xml#person-340">Ralph Craig</editor>
+                <author role="translatorMain" ref="eft:team-33"/>
+                <author role="translatorEng" ref="eft:person-304">David Kittay</author>
+                <consultant role="dharmaMaster" ref="eft:person-199">Lozang Jamspal</consultant>
+                <consultant role="projectManager" ref="eft:person-304">David Kittay</consultant>
+                <editor role="externalReviewer" ref="eft:person-340">Ralph Craig</editor>
+                <editor role="projectEditor" ref="eft:person-74">Ryan Damron</editor>
                 <sponsor ref="sponsors.xml#sponsor-184">Lily Xu</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2019</date>
+                <edition>v 0.0.8 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -42,7 +43,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-26T07:01:01.937Z" user="admin">26/07/2022 07:01:01</note>
+                <note type="lastUpdated" date-time="2023-01-16T13:31:05.978Z" user="admin">16/01/2023 13:31:05</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2020-09-09T12:03:30.805Z" user="line-tofte">2.g</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2020-09-09T12:03:30.805Z" user="line-tofte">Auto (update-publication-status)</note>
@@ -53,6 +54,7 @@
                 <note type="updated" update="text-version" value="0.0.5" date-time="2021-09-14T08:39:53.848Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.6" date-time="2021-09-14T08:40:18.75Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.7" date-time="2022-07-26T07:00:54.312Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2023-01-16T13:31:00.377Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
