--- a/translations/kangyur/placeholders/091-044_toh647,1079-the_oblation_ritual_which_comforts_the_female_ghosts_whose_mouths_are_aflame.xml
+++ b/translations/kangyur/placeholders/091-044_toh647,1079-the_oblation_ritual_which_comforts_the_female_ghosts_whose_mouths_are_aflame.xml
@@ -19,11 +19,11 @@
                 <consultant role="dharmaMaster" ref="contributors.xml#person-294">Karma Dorje (Rabjampa)</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2020</date>
+                <edition>v 0.0.5 <date>2020</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.h">
+            <publicationStmt status="2.g">
                 <idno xml:id="UT22084-091-044"/>
                 <date/>
             </publicationStmt>
@@ -48,7 +48,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-03-15T15:39:47.458Z" user="admin">15/03/2021 15:39:47</note>
+                <note type="lastUpdated" date-time="2023-01-17T08:35:16.512Z" user="admin">17/01/2023 08:35:16</note>
             
 <note type="updated" update="text-version" value="0.0.1" date-time="2020-02-17T09:16:33.593Z" user="andreas">0.0.1</note>
 <note type="updated" update="translation-status" value="2.h" date-time="2020-02-17T09:16:33.593Z" user="andreas">2.h</note>
@@ -58,7 +58,7 @@
     <note type="updated" update="text-version" value="0.0.2" date-time="2020-12-16T12:06:20.232Z" user="line-tofte">Auto (update-publication-status)</note>
     <note type="updated" update="text-version" value="0.0.3" date-time="2020-12-16T12:09:46.703Z" user="line-tofte">Auto (update-contributors)</note>
     <note type="updated" update="translation-status" value="2.h" date-time="2021-03-15T15:39:43.129Z" user="line-tofte">2.h</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-03-15T15:39:43.129Z" user="line-tofte">Auto (update-publication-status)</note>
+    <note type="updated" update="text-version" value="0.0.4" date-time="2021-03-15T15:39:43.129Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2023-01-17T08:35:10.93Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2023-01-17T08:35:10.93Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
