--- a/translations/kangyur/placeholders/091-044_toh647,1079-the_oblation_ritual_which_comforts_the_female_ghosts_whose_mouths_are_aflame.xml
+++ b/translations/kangyur/placeholders/091-044_toh647,1079-the_oblation_ritual_which_comforts_the_female_ghosts_whose_mouths_are_aflame.xml
@@ -4,22 +4,23 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">yi dags kha 'bar dbugs dbyung gtor chog</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="en">The Oblation Ritual which Comforts the Female Ghosts whose Mouths are Aflame</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">yi dags mo kha 'bar ma dbugs dbyung ba'i gtor ma'i cho ga/</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">yi dags kha 'bar dbyugs dbyung gtor cho ga</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">yi dags kha 'bar dbugs dbyung gtor chog</title>
                 <title type="otherTitle" xml:lang="en">The Oblation Ritual which Comforts Female Ghosts whose Mouths are Aflame</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">yi dags mo kha 'bar ma dbyugs dbyung ba'i gtor ma'i cho ga</title>
-                <author role="translatorMain" ref="contributors.xml#team-46"/>
-                <author role="translatorEng" ref="contributors.xml#person-292">Krisztina Teleki</author>
-                <editor role="reviser" ref="contributors.xml#person-325">Nathaniel Rich</editor>
-                <consultant role="projectManager" ref="contributors.xml#person-292">Krisztina Teleki</consultant>
-                <consultant role="advisor" ref="contributors.xml#person-293">Beáta Kakas</consultant>
-                <consultant role="dharmaMaster" ref="contributors.xml#person-294">Karma Dorje (Rabjampa)</consultant>
+                <title type="otherTitle" xml:lang="Bo-Ltn">yi dags kha 'bar dbyugs dbyung gtor cho ga</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">yi dags mo kha 'bar ma dbugs dbyung ba'i gtor ma'i cho ga/</title>
+                <author role="translatorMain" ref="eft:team-46"/>
+                <author role="translatorEng" ref="eft:person-292">Krisztina Teleki</author>
+                <editor role="reviser" ref="eft:person-325">Nathaniel Rich</editor>
+                <consultant role="projectManager" ref="eft:person-292">Krisztina Teleki</consultant>
+                <consultant role="advisor" ref="eft:person-293">Beáta Kakas</consultant>
+                <consultant role="dharmaMaster" ref="eft:person-294">Karma Dorje (Rabjampa)</consultant>
+                <editor role="associateEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2020</date>
+                <edition>v 0.0.6 <date>2020</date>
                 </edition>
             </editionStmt>
 
@@ -48,17 +49,19 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-17T08:35:16.512Z" user="admin">17/01/2023 08:35:16</note>
-            
-<note type="updated" update="text-version" value="0.0.1" date-time="2020-02-17T09:16:33.593Z" user="andreas">0.0.1</note>
-<note type="updated" update="translation-status" value="2.h" date-time="2020-02-17T09:16:33.593Z" user="andreas">2.h</note>
-<note type="updated" update="translation-status" value="3" date-time="2020-02-17T14:12:13.249Z" user="andreas">3</note>
-<note type="updated" update="translation-status" value="2.h" date-time="2020-04-01T10:57:13.715Z" user="line-tofte">2.h</note>
-    <note type="updated" update="translation-status" value="2.g" date-time="2020-12-16T12:06:20.232Z" user="line-tofte">2.g</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2020-12-16T12:06:20.232Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2020-12-16T12:09:46.703Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="2.h" date-time="2021-03-15T15:39:43.129Z" user="line-tofte">2.h</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-03-15T15:39:43.129Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2023-01-17T08:35:10.93Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2023-01-17T08:35:10.93Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2023-01-17T08:36:18.197Z" user="admin">17/01/2023 08:36:18</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2020-02-17T09:16:33.593Z" user="andreas">0.0.1</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2020-02-17T09:16:33.593Z" user="andreas">2.h</note>
+                <note type="updated" update="translation-status" value="3" date-time="2020-02-17T14:12:13.249Z" user="andreas">3</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2020-04-01T10:57:13.715Z" user="line-tofte">2.h</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2020-12-16T12:06:20.232Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2020-12-16T12:06:20.232Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2020-12-16T12:09:46.703Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2021-03-15T15:39:43.129Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2021-03-15T15:39:43.129Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2023-01-17T08:35:10.93Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2023-01-17T08:35:10.93Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2023-01-17T08:36:12.281Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
